--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ log/*
 gmon.out
 thumb/*
 virtualdisk/*
+latex/figures/*
+latex/main.aux
+latex/main.fdb_latexmk
+latex/main.fls
+latex/main.log
+latex/main.out
+latex/main.synctex.gz
